Minor UI updates for MFA enforcement

--- a/config/config.json
+++ b/config/config.json
@@ -24,8 +24,8 @@
         "EnableDeveloper": true,
         "EnableSecurityFixAlert": true,
         "EnableInsecureOutgoingConnections": false,
-        "EnableMultifactorAuthentication": true,
-        "EnforceMultifactorAuthentication": true,
+        "EnableMultifactorAuthentication": false,
+        "EnforceMultifactorAuthentication": false,
         "AllowCorsFrom": "",
         "SessionLengthWebInDays": 30,
         "SessionLengthMobileInDays": 30,
